[gd_scene load_steps=10 format=3 uid="uid://bnehdryqfnq3n"]

[ext_resource type="Script" uid="uid://bb7m1piqo72bv" path="res://scripts/UI/main_menu.gd" id="1_4cwpn"]
[ext_resource type="Shader" uid="uid://do1o7me4dck4j" path="res://Shaders/scroll.gdshader" id="2_f40uw"]
[ext_resource type="Texture2D" uid="uid://bpm1nnycb0pr6" path="res://Resources/Background/Brown.png" id="3_8ctay"]
[ext_resource type="FontFile" uid="uid://dvwd2jyhsoieg" path="res://Resources/fonts/Pixellari.ttf" id="4_4cwpn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jix8l"]
shader = ExtResource("2_f40uw")
shader_parameter/speed = 0.5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fu7sn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.838897, 0.838897, 0.838897, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.415686)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]
bg_color = Color(0.637843, 0.637843, 0.637843, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.415686)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.415686)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4cwpn")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_jix8l")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8ctay")
stretch_mode = 1

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -38.0
offset_right = 148.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_4cwpn")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Start"

[node name="Options" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_4cwpn")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Options
"

[node name="Credits" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_4cwpn")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Credits
"

[node name="Quit" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_4cwpn")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Quit
"

[node name="SettingsMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.5
offset_top = -74.5
offset_right = 196.5
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Back" type="Button" parent="SettingsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_4cwpn")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Back
"

[node name="VolumeLabel" type="Label" parent="SettingsMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4cwpn")
text = "Volume"

[node name="Volume" type="HSlider" parent="SettingsMenu"]
layout_mode = 2

[node name="MuteLabel" type="Label" parent="SettingsMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4cwpn")
text = "Mute"

[node name="Mute" type="CheckBox" parent="SettingsMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4cwpn")

[node name="Resolutions" type="OptionButton" parent="SettingsMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4cwpn")
selected = 0
item_count = 3
popup/item_0/text = "1980x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="CreditsMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -355.0
offset_top = -70.0
offset_right = 356.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CreditsMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4cwpn")
theme_override_font_sizes/font_size = 20
text = "The people who made it:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="CreditsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_4cwpn")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Back
"

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -307.0
offset_right = 308.0
offset_bottom = 129.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("4_4cwpn")
theme_override_font_sizes/font_size = 60
text = "GAME TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MainButtons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainButtons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SettingsMenu/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="SettingsMenu/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="SettingsMenu/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="SettingsMenu/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="pressed" from="CreditsMenu/Back" to="." method="_on_back_pressed"]
